tests-integration/fixtures/checking/1779972240_overlapping_instances_derive_no_use/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Box :: Box

Types
Box :: Type

Instances
instance Eq Box

Derived
derive Eq Box

Roles
Box = []

Diagnostics
error[OverlappingInstances]: Overlapping type class instances found for: Eq Box
  --> 9:1..10:16
  |
9 | instance eqBox :: Eq Box where
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Eq Box is matching
  trivia: Eq Box is matching
